--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculo somatória</title>
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
+    <header>Corrige somatória</header>
     
+    <main>
+        <table>
+            <th>Nº</th>
+            <th>SOMA</th>
+            <th></th>
+        </table>
+    </main>
+    
+    <footer>© Hugo E. Contreras - Em apoio ao Colégio Olavo Bilac, Itambé-PR</footer>
     <script src="./src/js/config.js"></script>
 </body>
 </html>
